--- a/hello-world/BUILD.bazel
+++ b/hello-world/BUILD.bazel
@@ -1,3 +1,4 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
-# gazelle:prefix github.com/example/project
+
+# gazelle:prefix app
 gazelle(name = "gazelle")
